[package]
name = "storage-wars"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "b6f284ce" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
dirs = "5"
sysinfo = "0.30"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
gpui = { git = "https://github.com/zed-industries/zed", features = ["test-support"] }
